Update to index. Fixed alignment! Thanks Prof P!

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@ font-family: 'Raleway', sans-serif;
 
 .bg-img{
   background-size: cover;
-  padding-top: 150px;
-  background-image: url("images/bot-image.jpg");
-  margin: 10%;
+  background-position: bottom center;
+  background-image: url(images/bot-image.jpg);
+  -webkit-mask-image: linear-gradient(to top, black 70%,transparent 100%);
 }
 
 body{
@@ -62,16 +62,16 @@ body{
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 0 75px;
+  padding: 15px 75px;
   color: rgb(50, 50, 50);
-  padding-top: 100px;
 }
 
-.options-footer li {
+.options-footer{
   list-style: none;
   display: inline-block;
   justify-content: space-between;
   text-decoration: none;
+  text-align: center;
 }
 
 .green{
@@ -212,6 +212,10 @@ p{
   margin: 0;
 }
 
+.padding-row{
+  padding-bottom: 110px;
+}
+
 .navbar{
   background-color: rgb(255, 255, 255, 90%);
   padding-top: 10px;
@@ -262,7 +266,7 @@ text-decoration:none;
   position:relative;
   text-align: center;
   color: #fff
-  padding-right:30%;
+  padding-right:40%;
 }
 
 .small-space{
@@ -277,8 +281,7 @@ text-decoration:none;
 }
 
 .space{
-  padding-top:250px;
-  padding-bottom:250px;
+  padding-top:200px;
   text-decoration: none;
 }
 
@@ -306,7 +309,12 @@ text-decoration:none;
 }
 
 .tagline-video{
-  width:75%;
+  width:55%;
+  padding-bottom: 40px;
+}
+
+.tagline-video:hover{
+  opacity:100%;
 }
 
 .text-alignment{
@@ -314,7 +322,6 @@ text-decoration:none;
   padding-top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 
 .top-text{
@@ -330,7 +337,7 @@ text-decoration:none;
 /*z-index: -100; try this if it looks broken later*/
 width:100%;
 height:90%;
--webkit-mask-image: linear-gradient(to bottom, black 80%,transparent 100%);
+-webkit-mask-image: linear-gradient(to bottom, black 70%,transparent 100%);
  mask-image: linear-gradient(to bottom, transparent black 80%,transparent 100%);
 top:0;
 left:0;
